--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 325 points<br>
+Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 329 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -31,6 +31,7 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
+<li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 2)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Apprentice Collector (Level 3)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -94,39 +95,39 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-20385 rev-parse
-1905 config
-1778 stash
- 571 status
- 304 commit
- 279 push
- 201 checkout
- 178 add
-  79 branch
-  67 diff
-  66 pull
-  43 remote
+25890 rev-parse
+2397 config
+1793 stash
+ 678 status
+ 361 commit
+ 332 push
+ 221 checkout
+ 211 add
+  90 branch
+  78 diff
+  77 pull
+  55 remote
   43 rebase
-  35 reset
+  41 log
+  39 reset
   34 merge
-  27 log
-  26 fetch
+  30 fetch
+  23 clone
   17 achievements
-  13 clone
+  14 init
   11 mv
-  11 init
   11 flow
   10 rm
+   8 submodule
    7 cherry-pick
    7 !git
+   6 tag
    6 show
-   5 submodule
+   6 clean
    5 gc
    4 symbolic-ref
-   3 revert
-   3 clean
+   4 revert
    3 blame
-   2 tag
    2 show-branch
    1 reflog
    1 ls-files
