--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 356 points<br>
+Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 361 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -84,6 +84,7 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
+<li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
 <li><div class="title">Product Manager (Level 4)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 5)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Product Manager (Level 6)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -99,27 +100,27 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-27712 rev-parse
-2406 config
-1793 stash
- 736 status
- 407 commit
- 369 push
- 234 add
- 228 checkout
-  94 branch
-  81 diff
-  78 pull
-  57 remote
-  52 log
+32423 rev-parse
+2522 config
+1803 stash
+ 889 status
+ 492 commit
+ 427 push
+ 303 add
+ 251 checkout
+ 112 branch
+  93 diff
+  83 log
+  81 pull
+  77 remote
+  43 reset
   43 rebase
-  42 reset
-  34 merge
+  37 merge
   32 fetch
-  23 clone
+  31 clone
+  20 rm
+  20 init
   17 achievements
-  16 init
-  13 rm
   11 mv
   11 flow
    8 submodule
@@ -133,8 +134,8 @@ Git commands sorted by usage:
    4 revert
    3 blame
    2 show-branch
+   2 ls-files
    1 reflog
-   1 ls-files
    1 help
 </pre>
 <script type="text/javascript">
