--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 361 points<br>
+Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 371 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -75,6 +75,7 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Let there be light</div>  <div class="info">Commit without a parent.</div></li>
 <li><div class="title">Master Author (Level 7)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Author (Level 8)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
+<li><div class="title">Master Author (Level 9)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Master Carpenter (Level        1)</div>  <div class="info">Custom <a href="http://www.kernel.org/pub/software/scm/git/docs/githooks.html">git-hooks</a> are installed which help catch issues before they are shared.</div></li>
 <li><div class="title">Master Product Manager (Level 10)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Product Manager (Level 7)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
@@ -100,24 +101,24 @@ Unlocked       26/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-32423 rev-parse
+33488 rev-parse
 2522 config
 1803 stash
- 889 status
- 492 commit
- 427 push
- 303 add
- 251 checkout
- 112 branch
-  93 diff
-  83 log
+ 911 status
+ 512 commit
+ 447 push
+ 313 add
+ 255 checkout
+ 115 branch
+  98 diff
+  91 remote
+  85 log
   81 pull
-  77 remote
+  44 rebase
   43 reset
-  43 rebase
   37 merge
+  33 clone
   32 fetch
-  31 clone
   20 rm
   20 init
   17 achievements
