--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 373 points<br>
+Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 376 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -57,6 +57,7 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Stone Mason (Level 2)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Stone Mason (Level 3)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Apprentice Tree Trimmer (Level 1)</div>  <div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
+<li><div class="title">Apprentice Tree Trimmer (Level 2)</div>  <div class="info">Rewrite branches with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-filter-branch.html">git-filter-branch</a></div></li>
 <li><div class="title">Architect (Level 4)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Author (Level 4)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
 <li><div class="title">Author (Level 5)</div>  <div class="info">Made 2^Level commits using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-commit.html">git-commit</a>.</div></li>
@@ -102,18 +103,18 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-33718 rev-parse
+33845 rev-parse
 2522 config
 1803 stash
- 921 status
- 517 commit
+ 929 status
+ 521 commit
  454 push
- 315 add
- 256 checkout
+ 318 add
+ 257 checkout
  115 branch
-  99 diff
+ 102 diff
   92 remote
-  87 log
+  89 log
   81 pull
   44 reset
   44 rebase
@@ -134,10 +135,10 @@ Git commands sorted by usage:
    5 gc
    4 symbolic-ref
    4 revert
+   4 filter-branch
    3 blame
    2 show-branch
    2 ls-files
-   2 filter-branch
    1 reflog
    1 help
 </pre>
