--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 376 points<br>
+Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 380 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -30,6 +30,7 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Apprentice Cathedral Architect (Level 1)</div>  <div class="info">Added a submodule to a repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 1)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Chimney Sweeper (Level 2)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
+<li><div class="title">Apprentice Chimney Sweeper (Level 3)</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-gc.html">git-gc</a> to run a number of housekeeping tasks on the current repository.</div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 2)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Cleaning lady (Level 3)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Apprentice Collector (Level 1)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
@@ -103,7 +104,7 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-33845 rev-parse
+33863 rev-parse
 2522 config
 1803 stash
  929 status
@@ -127,18 +128,19 @@ Git commands sorted by usage:
   11 mv
   11 flow
    8 submodule
+   8 gc
    7 cherry-pick
    7 !git
    6 tag
    6 show
    6 clean
-   5 gc
+   5 filter-branch
    4 symbolic-ref
    4 revert
-   4 filter-branch
    3 blame
    2 show-branch
    2 ls-files
+   2 fsck
    1 reflog
    1 help
 </pre>
