--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 391 points<br>
+Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 396 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -70,6 +70,7 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Butcher (Level 4)</div>  <div class="info">Performed an interactive rebase using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-rebase.html">git-rebase</a> -i.</div></li>
 <li><div class="title">Caretaker</div>  <div class="info">Added a .gitignore file to a repository.</div></li>
 <li><div class="title">Cherry Picker</div>  <div class="info">Used <a href="http://www.kernel.org/pub/software/scm/git/docs/git-cherry-pick.html">git-cherry-pick</a> to add a sha from another branch into the current branch.</div></li>
+<li><div class="title">Cleaning lady (Level 4)</div>  <div class="info">Remove untracked files from the working tree with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-clean.html">git-clean</a></div></li>
 <li><div class="title">Collector (Level 4)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Collector (Level 5)</div>  <div class="info">Fetches named heads or tags from another repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-fetch.html">git-fetch</a></div></li>
 <li><div class="title">Garage Inventor</div>  <div class="info">Used a custom alias for a Git command</div></li>
@@ -106,33 +107,33 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-36766 rev-parse
+37556 rev-parse
 2522 config
 1820 stash
-1013 status
- 552 commit
- 469 push
- 343 add
- 266 checkout
- 125 branch
- 124 diff
- 113 log
- 100 remote
+1046 status
+ 562 commit
+ 479 push
+ 358 add
+ 276 checkout
+ 145 branch
+ 125 diff
+ 121 log
+ 114 remote
   81 pull
+  51 reset
   49 rebase
-  46 reset
   37 merge
   35 clone
   32 fetch
-  26 rm
+  28 rm
   21 init
   17 achievements
   15 mv
-  11 gc
+  15 gc
+  13 clean
   11 flow
    8 submodule
    8 show
-   7 clean
    7 cherry-pick
    7 !git
    6 tag
@@ -141,9 +142,9 @@ Git commands sorted by usage:
    5 filter-branch
    4 symbolic-ref
    4 revert
+   4 ls-files
    3 blame
    2 reflog
-   2 ls-files
    1 prune
    1 help
 </pre>
