--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 
 <h2>Brian Solon's Git Achievements <img src='http://www.gravatar.com/avatar/da9c4afbdd596f3de4a4223897af5b77'/></h2>
-Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 396 points<br>
+Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">Git Achievements</a> for 406 points<br>
 <ul>
 <li><div class="title">Apprentice Architect (Level 1)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
 <li><div class="title">Apprentice Architect (Level 2)</div>  <div class="info">Created a new repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-init.html">git-init</a>.</div></li>
@@ -89,6 +89,7 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 <li><div class="title">Master Product Manager (Level 9)</div>  <div class="info">Stash the changes in a dirty working directory away with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-stash.html">git-stash</a>.</div></li>
 <li><div class="title">Master Socialite (Level 7)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Socialite (Level 8)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
+<li><div class="title">Master Socialite (Level 9)</div>  <div class="info">pushed a branch to a remote repository using <a href="http://www.kernel.org/pub/software/scm/git/docs/git-push.html">git-push</a></div></li>
 <li><div class="title">Master Stone Mason (Level 7)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Master Stone Mason (Level 8)</div>  <div class="info">Added files to the index area for inclusion in the next commit with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-add.html">git-add</a></div></li>
 <li><div class="title">Merchant (Level 4)</div>  <div class="info">Added an external repository with <a href="http://www.kernel.org/pub/software/scm/git/docs/git-remote.html">git-remote</a> add.</div></li>
@@ -107,30 +108,30 @@ Unlocked       27/      51 <a href="http://github.com/icefox/git-achievements">G
 </ul>
 Git commands sorted by usage:
 <pre style="text-align: left">
-37556 rev-parse
+41808 rev-parse
 2522 config
 1820 stash
-1046 status
- 562 commit
- 479 push
- 358 add
- 276 checkout
- 145 branch
- 125 diff
- 121 log
- 114 remote
-  81 pull
-  51 reset
-  49 rebase
-  37 merge
+1183 status
+ 633 commit
+ 512 push
+ 406 add
+ 300 checkout
+ 150 log
+ 150 branch
+ 136 diff
+ 122 remote
+  89 pull
+  57 rebase
+  55 reset
+  52 rm
+  38 merge
   35 clone
   32 fetch
-  28 rm
-  21 init
+  22 init
+  21 mv
   17 achievements
-  15 mv
   15 gc
-  13 clean
+  14 clean
   11 flow
    8 submodule
    8 show
